# rust-chord

./: .gitignore  README.md  package-lock.json  package.json  webpack.config.js
.idx/: dev.nix
docs/: directory-structure.md  instructions.md
frontend/: index.html
frontend/assets/: placeholder.txt
frontend/src/: main.js
frontend/src/audio/: context.js  midi.js  sampler-worklet.js  worklet-processor-code.js
frontend/src/ui/: effects.js  meters.js  transport.js  waveform.js
frontend/src/utils/: file-loader.js  keyboard.js
frontend/src/video/: decoder.js  renderer.js  sync.js
frontend/styles/: main.css
sampler-wasm/: Cargo.toml
sampler-wasm/src/: envelope.rs  lib.rs  processor.rs  utils.rs
sampler-wasm/src/effects/: delay.rs  distortion.rs  filter.rs  mod.rs
