[package]
name = "sampler-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "WebAssembly audio sampler with video sync"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
    "Node",
    "Element",
    "AudioContext",
    "BaseAudioContext",
    "AudioWorkletNode",
    "AudioDestinationNode",
    "AudioParam",
    "AudioBuffer"
]}
# Enable wee_alloc for smaller code size
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["wee_alloc"]

[profile.release]
opt-level = 3
lto = true